refactor(Player): 플레이어 생성자 로직 변경